Fixed Margin top of hero section on mobile phones 2

--- a/css/main.css
+++ b/css/main.css
@@ -590,6 +590,10 @@ video {
   z-index: 10;
 }
 
+.m-20 {
+  margin: 5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -624,6 +628,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
